ユーザーアバター画像の登録

--- a/app/views/devise/registrations/new.html.haml
+++ b/app/views/devise/registrations/new.html.haml
@@ -11,7 +11,15 @@
           .main__conect__lists__text
             必須
           %br/
-          = f.text_field :nickname,class:'input_box',placeholder:'例）ジェイソンスティサム'
+          = f.text_field :nickname,class:'input_box',placeholder:'例）とろろ'
+        .main__conect__lists
+          アバター画像
+          .main__conect__lists__text
+            必須
+          %br/
+          .main__conect__lists__ava
+            #img_field{onclick: "$('#file').click()"}
+            = f.file_field :avatar,class: "image_input", id:"file",accept: '.jpeg, .jpg, .gif, .png, .bmp'
         .main__conect__lists
           メールアドレス
           .main__conect__lists__text
