--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -5,7 +5,7 @@
       .search-container__left__search-content
         .search-container__left__search-content__text
           %i.fas.fa-search キーワードで並び替え
-        %input.search-container__left__search-content__keyword.search__query{name:"keyword", placeholder:"#{@items_search.name}"}
+        %input.search-container__left__search-content__keyword.search__query{name:"keyword", placeholder:"キーワード"}
         .search-container__left__search-content__content
           %text 詳細検索
           %ul.search-container__left__search-content__content__search-box
