--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -118,6 +118,8 @@ padding-top:8px;
               position: absolute;
               top:0;
               left:-26px;
+              height: 37px;
+              width: 37px;
               border-radius: 50%;
             }
           }
