--- a/app/views/layouts/_drop-mypage.html.haml
+++ b/app/views/layouts/_drop-mypage.html.haml
@@ -1,12 +1,12 @@
 %li.drop-mypage
   =link_to user_path(current_user) do
-    = image_tag '//static.mercdn.net/images/member_photo_noimage_thumb.png', alt: '', width: '32'
+    = image_tag  url_for(current_user.avatar)
     %span
       マイページ
     %ul.drop-mypage-list
       %li.drop-icon
         = link_to "/" do
-          = image_tag '//static.mercdn.net/images/member_photo_noimage_thumb.png', height: '60', width: '60', class: 'drop-icon'
+          = image_tag url_for(current_user.avatar), height: '60', width: '60', class: 'drop-icon'
       %li.drop-name
         = current_user.nickname
         .drop-text
