隠しログアウトボタン追加

--- a/app/views/items/_product_information.html.haml
+++ b/app/views/items/_product_information.html.haml
@@ -198,5 +198,6 @@
         = image_tag src='//www-mercari-jp.akamaized.net/assets/img/common/common/logo-gray.svg?3791839826', alt: 'mercari', height: '65', width: '80', class: 'fotter-logo'
     %p
       %small © 2019 Mercari
+    = link_to "ログアウト", "/users/sign_out", method: :delete,style: "color:white;"
 
 
