カード登録機能修正

--- a/app/assets/stylesheets/_card_add_to.scss
+++ b/app/assets/stylesheets/_card_add_to.scss
@@ -40,7 +40,10 @@
             background-color: #ea352d;
             border-radius: 4px;
             width: 343px;
-            &__text{
+            // &__text{
+            // }
+            &__card{
+              padding: 24px 0;
             }
             &__btn{
               padding-top:17px;
