--- a/app/views/cards/new.html.haml
+++ b/app/views/cards/new.html.haml
@@ -7,14 +7,14 @@
     .main__conect
       .main__conect__lists
         %ul.main__conect__lists__list
-          = form_with url: pay_cards_path, method: :post, id: "charge-form" do |f|
+          = form_with url: make_card_path(current_user),method: :post, html: {name: 'inputForm' } do |f|
             %li.main__conect__lists__list__text
               カード番号
             %li.main__conect__lists__list__required
               必須
             %li.main__conect__lists__list__image
             %li.main__conect__lists__list__text_area
-              = f.text_field :number, placeholder:'半角数字のみ',maxlength: "16", type: "text",class: "text_field", id: "card_number"
+              = f.text_field :number, placeholder:'半角数字のみ',class: "text_field", id: "card_number"
             %ul.main__conect__lists__list__expiration
               %li.main__conect__lists__list__expiration__text
                 有効期限
@@ -39,9 +39,9 @@
             %li.main__conect__lists__list__required
               必須
             %li.main__conect__lists__list__text_area
-              = f.text_field :cvc, placeholder:'カード背面4桁もしくは3桁の番号', maxlength: "4",class: "text_field", id: "cvc"
+              = f.text_field :cvc, placeholder:'カード背面4桁もしくは3桁の番号',class: "text_field", id: "cvc"
             %li.main__conect__lists__list__link
               = link_to 'カード裏面の番号とは？','complete_page'
               %li.main__conect__lists__list__btn
-                = f.button '次へ進む',class: "submit_btn", id: "card_token"
+                = f.submit '次へ進む',class: "submit_btn", id: "charge-form"
   = render 'layouts/footer-registrations'
