--- a/app/views/items/_item_details.html.haml
+++ b/app/views/items/_item_details.html.haml
@@ -79,7 +79,7 @@
     %span.item-details__price-box__fee 送料込み
   -if user_signed_in?
     -if @item.seller_id != current_user.id && @item.buyer_id.nil?
-      =link_to "購入画面に進む", card_path(@item), id:"item-details-buy-btn"
+      =link_to "購入画面に進む", card_buy_card_path(@item), id:"item-details-buy-btn"
     -elsif @item.buyer_id.presence
       %p.item-details-buy-btn-gray
         売り切れました
