--- a/app/views/items/_picup_content.html.haml
+++ b/app/views/items/_picup_content.html.haml
@@ -13,3 +13,5 @@
           .items-box
             .items-price 
               = "¥ #{item.price}"
+            %i.fas.fa-heart
+              = "#{item.likes.count}"
