--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -137,17 +137,117 @@
     overflow:auto;
     &__left{
       float: left;
-      &__like{
-        height:30px;
-        line-height:0px;
+      &__likes{
+        height: 26px;
+        width: 110px;
+        text-align: center;
+        line-height:23px;
         font-size:14px;
-        color: #333;
+        border: 1px solid #EB452F;
+        background: #f5f5f5;
+        display: inline-block;
+        border-radius: 40px;
+        .heart-like{
+          color: #EB452F;
+          animation: animScale 1s linear ;
+          transform-origin: 50% 100%;
+        }
+        p{
+          display: inline-block;
+          color: #EB452F;
+        }
+      }
+      &__unlikes{
+        height: 26px;
+        width: 112px;
+        text-align: center;
+        line-height:26px;
+        font-size:14px;
         border: 1px solid #f5f5f5;
         background: #f5f5f5;
         display: inline-block;
-        padding: 8px 16px;
         border-radius: 40px;
-        transition: all ease-out .3s;
+        .heart-unlike{
+          color: #333;
+          font-weight: lighter;
+        }
+      }
+      &__like{
+        height: 26px;
+        width: 112px;
+        text-align: center;
+        line-height:26px;
+        font-size:14px;
+        border: 1px solid #EB452F;
+        background: #f5f5f5;
+        display: inline-block;
+        border-radius: 40px;
+        margin: -0.6px -0.6px;
+        .heart-like{
+          color: #EB452F;
+          animation: animScale 1s linear ;
+          transform-origin: 50% 100%;
+        }
+        @keyframes animScale {
+        0% { transform: scale(1,1); }     
+        30% { transform: scale(1.3,.8); } 
+        40% { transform: scale(1.4,.8); }
+        50% { transform: scale(0.95,1.08); }
+        60% { transform: scale(1.15,0.9); }
+        70% { transform: scale(0.98,1.02); }
+        100% { transform: scale(1,1); }
+        } 
+        p{
+          display: inline-block;
+          color: #EB452F;
+        }
+        .up{
+          animation: fade-in-up ease-out .4s forwards;
+        }
+        @keyframes fade-in-up {
+          from {
+            opacity: 0;
+            transform: translate3d(0, 20%, 0);
+          }
+          to {
+            opacity: 1;
+            transform: translate3d(0, 0, 0);
+          }
+        }
+      }
+      &__unlike{
+        height: 26px;
+        width: 112px;
+        text-align: center;
+        line-height:26px;
+        font-size:14px;
+        border: 1px solid #f5f5f5;
+        background: #f5f5f5;
+        display: inline-block;
+        border-radius: 40px;
+        margin: -1px -1.3px;
+        .heart-unlike{
+          color: #333;
+          font-weight: lighter;
+        }
+        p{
+          display: inline-block;
+          color: #333;
+          font-weight: lighter;
+        }
+        .down{
+          animation: fade-in-down ease-out .4s forwards;
+        }
+        @keyframes fade-in-down {
+          from {
+            opacity: 0;
+            transform: translate3d(0, -20%, 0);
+          }
+          to {
+            opacity: 1;
+            transform: translate3d(0, 0, 0);
+          }
+        }
       }
     }
     &__right{
@@ -474,7 +574,6 @@
     }
   }
 }
-
 .items-details-profile__user__content__box:nth-child(3n){
   margin-right: 0;
 }
