コメント機能

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -1,8 +1,7 @@
 .item-details-container
   =render 'layouts/header'
-
   =render 'item_details'
-  
+  =render 'layouts/comment'
   %ul.item-details-nav-link
     %li.item-details-nav-link__prev
       =link_to "/" do
