--- a/app/views/items/show_user_item.html.haml
+++ b/app/views/items/show_user_item.html.haml
@@ -15,6 +15,7 @@
       = link_to '削除する',item_path(@item.id),class: "delete-contnet__box__delete",method: :delete
   =render 'layouts/header'
   =render 'items/item_details'
+  =render 'layouts/comment'
   .item-edit-content
     .item-edit-content__inner
       .edit-buttons
