--- a/app/assets/stylesheets/_item_buy-page.scss
+++ b/app/assets/stylesheets/_item_buy-page.scss
@@ -26,12 +26,41 @@
         height: 64px;
       }
     }
+    &__buyed-image{
+      height: 200px;
+      width: 200px;
+      object-fit: cover;
+      margin: 0 auto;
+    }
     &__buy-item-name{
       width: calc(100% - 80px);
       margin: 0 0 0 16px;
       text-align: left;
       font-size: 16px;
       line-height: 1.5;
+    }
+    &__buyed-name{
+      text-align: center;
+      font-weight: bold;
+      margin-top: 8px;
+      padding: 20px;
+    }
+    &__buyed-form{
+      text-align: center;
+      padding-top: 40px;
+      border-top: 1px solid #eee;
+      &__buyed-price{
+        font-weight: bold;
+        display: inline-block;
+        text-align: center;
+        font-size: 26px;
+      }
+      &__buyed-text {
+        font-weight: 100;
+        display: inline-block;
+        text-align: center;
+        font-size: 16px;
+      }
     }
     &__buy-form{
       width: 100%;
@@ -40,7 +69,7 @@
         margin: 8px 0 0;
         line-height: 1.5;
         font-size: 22px;
-
+      
         &__item-shipping-fee{
           margin: 0 0 0 8px;
           font-size: 14px;
@@ -90,6 +119,7 @@
         border: 1px solid #ea352d;
         color: #fff;
         margin: 8px 0 0;
+        cursor: pointer;
       }
     }
   }
@@ -115,7 +145,7 @@
     }
   }
   &__buy-content{
-    padding: 24px 12.5% 40px;
+    padding: 24px 12.5% 0;
     img{
       width: 34px;
       height: 20px;
@@ -133,6 +163,13 @@
         display: block;
         text-align: right;
       }
+    }
+  }
+  &__buy-content{
+    border-top: 1px solid #f5f5f5;
+    &__buyed-mypage{
+      padding: 24px 12.5% 48px;
+      text-align: center;
     }
   }
 }
