--- a/app/assets/stylesheets/_user-card.scss
+++ b/app/assets/stylesheets/_user-card.scss
@@ -176,3 +176,25 @@
     }
   }
 }
+.l-single-content {
+  max-width: 320px;
+  margin: 0 auto;
+  position: relative;
+}
+.settings-payment-num {
+  margin: 8px 0 0;
+  font-size: 16px;
+}
+.settings-payment-remove {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: 4px 6px;
+  background: #fff;
+  border-radius: 3px;
+  border: 1px solid #ea352d;
+  color: #ea352d;
+}
+li{
+  list-style: none;
+}
