--- a/app/views/layouts/_mypage-sidebar.html.haml
+++ b/app/views/layouts/_mypage-sidebar.html.haml
@@ -77,7 +77,7 @@
         発送元・お届け先住所変更
         %i.fa.fa-chevron-right
     %li.mypage__nav__side-bar__lists__list
-      = link_to card_add_to_users_path(current_user) do 
+      = link_to card_add_to_user_path(current_user) do 
         支払い方法
         %i.fa.fa-chevron-right
     %li.mypage__nav__side-bar__lists__list
