--- a/app/views/users/card_add_to.html.haml
+++ b/app/views/users/card_add_to.html.haml
@@ -15,6 +15,7 @@
                 %ul.main__conect__lists
                   %li.main__conect__lists__text
                     クレジットカード一覧
+                -if current_user.card.blank?
                   %li.main__conect__lists__link
                     = link_to user_card_users_path(current_user) ,class: 'card_link' do
                       .main__conect__lists__link__text
@@ -23,5 +24,17 @@
                   %li.main__conect__lists__border
                   %li.main__conect__lists__message
                     = link_to '支払い方法について','/',class: 'message'
+                - else
+                  %form.l-single-content
+                    %figure
+                      = image_tag  "//www-mercari-jp.akamaized.net/assets/img/card/visa.svg?550906487", width: "49", alt: "visa", height: "15"
+                    .settings-payment-num ************4242
+                    .settings-payment-num 12 / 20
+                    %button.settings-payment-remove{type: "submit"}
+                      削除する
+                  %li.main__conect__lists__border
+                  %li.main__conect__lists__message
+                    = link_to '支払い方法について','/',class: 'message'
+
 = render "layouts/banner"
 = render "layouts/footer"
