--- a/app/views/items/_product_information.html.haml
+++ b/app/views/items/_product_information.html.haml
@@ -3,8 +3,8 @@
     %h1
       = link_to "/" do
         = image_tag src="//www-mercari-jp.akamaized.net/assets/img/common/common/logo.svg?3791839826", alt: '', height: '', width: '', class: 'singel-image'
-  .single__main
-    = form_with model: @item, local: true  do |form|
+  .single__main#image-uploader
+    = form_with model: @item, local: true ,id: "single_form" do |form|
       .single__main__contents
         %h2.single-head 商品の情報を入力
         .sell__form
