--- a/app/views/layouts/_mypage-sidebar.html.haml
+++ b/app/views/layouts/_mypage-sidebar.html.haml
@@ -1,7 +1,7 @@
 .mypage__nav__side-bar
   %ul.mypage__nav__side-bar__lists
     %li.mypage__nav__side-bar__lists__list
-      = link_to "show" do 
+      = link_to user_path(current_user) do
         マイページ
         %i.fa.fa-chevron-right
     %li.mypage__nav__side-bar__lists__list
@@ -69,7 +69,7 @@
   %h3.mypage__nav__side-bar__head 設定
   %ul.mypage__nav__side-bar__nav-lists
     %li.mypage__nav__side-bar__lists__list
-      = link_to "profile" do 
+      = link_to profile_users_path(current_user) do
         プロフィール
         %i.fa.fa-chevron-right
     %li.mypage__nav__side-bar__lists__list
