--- a/app/assets/stylesheets/_comment.scss
+++ b/app/assets/stylesheets/_comment.scss
@@ -121,6 +121,7 @@
         height:85px;
         font-weight: 100;
         .textbox{
+          font-size:20px;
           margin-top: 8px;
           padding: 10px;
           width: 615px;
