--- a/app/assets/stylesheets/_login_page.scss
+++ b/app/assets/stylesheets/_login_page.scss
@@ -112,6 +112,7 @@
           position: relative;
           bottom: 20px;
           font-size: 25px;
+          padding-top: 17px;
         }
       }
       &__google{
