--- a/app/assets/stylesheets/_0signup_page.scss
+++ b/app/assets/stylesheets/_0signup_page.scss
@@ -82,6 +82,7 @@
           position: relative;
           bottom: 20px;
           font-size: 25px;
+          padding-top: 17px;
         }
       }
       &__google{
