--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -29,7 +29,7 @@
           %nav.header__inner__main__right__nav
             %ul.header__inner__main__right__nav__user
               %li.header__inner__main__right__nav__user__like
-                =link_to "/" do
+                =link_to likes_path do
                   %i.fa.fa-heart
                   %span いいね！一覧
               %li.header__inner__main__right__nav__user__notification
