--- a/app/views/layouts/_mypage-sidebar.html.haml
+++ b/app/views/layouts/_mypage-sidebar.html.haml
@@ -13,7 +13,7 @@
         やることリスト
         %i.fa.fa-chevron-right
     %li.mypage__nav__side-bar__lists__list
-      = link_to"/" do 
+      = link_to likes_path do 
         いいね！一覧
         %i.fa.fa-chevron-right
     %li.mypage__nav__side-bar__lists__list
