--- a/app/views/items/_item_details.html.haml
+++ b/app/views/items/_item_details.html.haml
@@ -23,13 +23,13 @@
             %div
               .item-details__main__table__ratings
                 %i.fas.fa-laugh
-                %span 100
+                %span #{@rating_good}
               .item-details__main__table__ratings
                 %i.fas.fa-meh
-                %span 10
+                %span #{@rating_nomal}
               .item-details__main__table__ratings
                 %i.fas.fa-frown-open
-                %span 0
+                %span #{@rating_bad}
         %tr
           %th カテゴリー
           %td
