--- a/app/assets/stylesheets/_item_buy-page.scss
+++ b/app/assets/stylesheets/_item_buy-page.scss
@@ -143,9 +143,6 @@
         text-align: right;
       }
     }
-  }
-  &__buy-content{
-    padding: 24px 12.5% 0;
     img{
       width: 34px;
       height: 20px;
@@ -167,9 +164,54 @@
   }
   &__buy-content{
     border-top: 1px solid #f5f5f5;
+    padding: 24px 12.5% 0;
+    &__ratings{
+      border-bottom:1px solid #eee;
+      display: inline-block;
+      font-size: 85%;
+      padding: 0 0 40px 30px;
+      :nth-child(2){
+        margin-left:0;
+      }
+      &__text{
+        margin: 30px 0 30px 0px;
+        font-size:20px;
+        font-weight: bold;
+      }
+      label{
+        display: inline-block;
+        margin-left:30px;
+        input{
+          height:35px;
+          line-height:35px;
+        }
+      }
+      .fa-laugh{
+        font-size:35px;
+        color: #ef5185;
+        padding-left:5px;
+      }
+      .fa-meh{
+        font-size:35px;
+        color: #fba933;
+        padding-left:5px;
+      }
+      .fa-frown-open{
+        font-size:35px;
+        color: #6ab5d8;
+        padding-left:5px;
+      }
+    }
     &__buyed-mypage{
-      padding: 24px 12.5% 48px;
+      padding: 48px 12.5% 48px;
       text-align: center;
+      &__buy-inner{
+        font-size:16px;
+        padding: 0;
+        border: none;
+        background: transparent;
+        cursor: pointer;
+      }
     }
   }
 }
