--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,3 +45,17 @@ nav.pagination li a.active {
   border-radius: 15px;
 }
 nav.pagination li a:hover:not(.active) {background-color: #ddd;}
+
+.nav-count{
+  position: absolute;
+  top: -2px;
+  left: 6px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #ea352d;
+  text-align: center;
+  line-height: 20px;
+  font-size: 12px;
+  color: #fff;
+}
