--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -32,6 +32,9 @@
                 =link_to likes_path do
                   %i.fa.fa-heart
                   %span いいね！一覧
+                  - if like_count > 0
+                    .nav-count
+                      = like_count
               %li.header__inner__main__right__nav__user__notification
                 =link_to "/" do
                   %i.fa.fa-bell
