--- a/app/assets/stylesheets/_mypage.scss
+++ b/app/assets/stylesheets/_mypage.scss
@@ -158,6 +158,7 @@
         }
         &__item-lists li.show{
           display: block;
+          margin-top: -17px;
         }
       }
       &__bottom-container{
