--- a/app/views/layouts/_mypage-sidebar.html.haml
+++ b/app/views/layouts/_mypage-sidebar.html.haml
@@ -5,7 +5,7 @@
         マイページ
         %i.fa.fa-chevron-right
     %li.mypage__nav__side-bar__lists__list
-      = link_to"/" do 
+      = link_to notifications_path do 
         お知らせ
         %i.fa.fa-chevron-right
     %li.mypage__nav__side-bar__lists__list
