--- a/app/views/users/completed.html.haml
+++ b/app/views/users/completed.html.haml
@@ -19,6 +19,7 @@
         .mypage__nav__main-contents__bottom-tabcontents
           %ul.mypage__nav__main-contents__bottom-tabcontents__item-lists
             %li.mypage__nav__main-contents__bottom-tabcontents__item-lists__list.show
-              取引中の商品がありません
+              売却済みの商品がありません
+              %i.fas.fa-angle-right
 = render "layouts/banner"
 = render "layouts/footer"
