--- a/app/assets/stylesheets/_mypage.scss
+++ b/app/assets/stylesheets/_mypage.scss
@@ -225,6 +225,25 @@
         &__item-lists li.show{
           display: block;
         }
+        &__listing-lists{
+          overflow: scroll;
+          &__list{
+            height: 100px;
+            line-height: 100px 0 60px;
+            font-size: 16px;
+            border-bottom: 1px solid #eee;
+          }
+          &__list.new{
+            padding: 16px;
+            max-height: 50px;
+            min-height: 50px;
+            position: relative;
+            &:hover{
+              background-color: #FAFAFA;
+              cursor: pointer;
+            }
+          }
+        }
       }
       &__single-inner{
       padding: 64px;
