--- a/app/views/layouts/_mypage-sidebar.html.haml
+++ b/app/views/layouts/_mypage-sidebar.html.haml
@@ -17,7 +17,7 @@
         いいね！一覧
         %i.fa.fa-chevron-right
     %li.mypage__nav__side-bar__lists__list
-      = link_to"/" do 
+      = link_to new_item_path do 
         出品する
         %i.fa.fa-chevron-right
     %li.mypage__nav__side-bar__lists__list
