--- a/app/views/users/purchase.html.haml
+++ b/app/views/users/purchase.html.haml
@@ -14,8 +14,19 @@
             = link_to purchased_user_path(current_user) do
               %p 過去の取引
         .mypage__nav__main-contents__bottom-tabcontents
+        -if @item_buyer.empty?
           %ul.mypage__nav__main-contents__bottom-tabcontents__item-lists
             %li.mypage__nav__main-contents__bottom-tabcontents__item-lists__list.show
-              過去に取引した商品がありません
+              購入した商品がありません
+        -else
+          %ul.mypage__nav__main-contents__bottom-tabcontents__listing-lists
+          - @item_buyer.each do |item|
+            %li.mypage__nav__main-contents__bottom-tabcontents__listing-lists__list.new
+              = image_tag url_for(item.images.first), heigth: '50', width: '50'
+              .item-name
+                = "「#{item.name}」を購入しました"
+              %span.item-stutas
+                取引中
+              %i.fas.fa-angle-right
 = render "layouts/banner"
 = render "layouts/footer"
