--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -29,9 +29,12 @@
           %nav.header__inner__main__right__nav
             %ul.header__inner__main__right__nav__user
               %li.header__inner__main__right__nav__user__like
-                =link_to "/" do
+                =link_to likes_path do
                   %i.fa.fa-heart
                   %span いいね！一覧
+                  - if like_count > 0
+                    .nav-count
+                      = like_count
               %li.header__inner__main__right__nav__user__notification
                 =link_to notifications_path do
                   %i.fa.fa-bell
