--- a/app/views/notifications/index.html.haml
+++ b/app/views/notifications/index.html.haml
@@ -6,7 +6,7 @@
     = render 'layouts/mypage-sidebar'
     .mypage__nav__main-contents
       .mypage__nav__main-contents__user-icon
-        = link_to "/" do
+        = link_to root_path do
           = image_tag  url_for(current_user.avatar), height: '60', width: '60', class: 'mypage__nav__main-contents__user-icon__image'
           %h2.mypage__nav__main-contents__user-icon__name 
             = current_user.nickname
