--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -36,10 +36,22 @@
           %li.mypage__nav__main-contents__bottom-container__tabs__tab
             %p 過去の取引
       .mypage__nav__main-contents__bottom-tabcontents
+      -if @item_buyer.empty?
         %ul.mypage__nav__main-contents__bottom-tabcontents__item-lists
           %li.mypage__nav__main-contents__bottom-tabcontents__item-lists__list.show
-            取引中の商品がありません
+            購入した商品がありません
           %li.mypage__nav__main-contents__bottom-tabcontents__item-lists__list 過去の取引はありません
+      -else
+        %ul.mypage__nav__main-contents__bottom-tabcontents__listing-lists
+        - @item_buyer.each do |item|
+          = link_to item_path(item) do
+            %li.mypage__nav__main-contents__bottom-tabcontents__listing-lists__list.new
+              = image_tag url_for(item.images.first), heigth: '50', width: '50', class: "item-image"
+              .item-name
+                = "「#{item.name}」を購入しました"
+              %span.item-stutas
+                取引中
+              %i.fas.fa-angle-right
 = render "layouts/banner"
 = render "layouts/footer"
 
