--- a/app/assets/stylesheets/_listings.scss
+++ b/app/assets/stylesheets/_listings.scss
@@ -62,7 +62,12 @@
       cursor: auto;
     }
   }
-  img{
+
+  a{
+    text-decoration: none;
+    color: black;
+  }
+  .item-image{
     float: left;
   }
   .item-name{
