ビュー修正

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -40,7 +40,7 @@
                   %i.fa.fa-bell
                   %span お知らせ
                   -if unchecked_notifications.any?
-                    .nav-count
+                    .nav-count1
                       = unchecked_notifications.count
               %li.header__inner__main__right__nav__user__todo
                 =link_to "/" do
