--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -58,3 +58,16 @@ nav.pagination li a:hover:not(.active) {background-color: #ddd;}
   font-size: 12px;
   color: #fff;
 }
+.nav-count1{
+  position: absolute;
+  top: -2px;
+  left: 6px;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  background: #ea352d;
+  text-align: center;
+  line-height: 20px;
+  font-size: 12px;
+  color: #fff;
+}
