ビュー修正

--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -53,3 +53,4 @@
               =link_to '新規会員登録',signup_page_users_path,class: 'btn_red'
             .header__inner__main__btn__login
               =link_to 'ログイン',new_user_session_path,class: 'btn_blue'
+= render 'layouts/notification_flash'
