--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -60,6 +60,7 @@ nav.pagination li a:hover:not(.active) {background-color: #ddd;}
   line-height: 20px;
   font-size: 12px;
   color: #fff;
+  animation: jump 3s ease-out;
 }
 .nav-count1{
   position: absolute;
