--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -1,36 +1,33 @@
-%h2
-  Edit #{resource_name.to_s.humanize}
-= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
-  = render "devise/shared/error_messages", resource: resource
-  .field
-    = f.label :email
-    %br/
-    = f.email_field :email, autofocus: true, autocomplete: "email"
-  - if devise_mapping.confirmable? && resource.pending_reconfirmation?
-    %div
-      Currently waiting confirmation for: #{resource.unconfirmed_email}
-  .field
-    = f.label :password
-    %i (leave blank if you don't want to change it)
-    %br/
-    = f.password_field :password, autocomplete: "new-password"
-    - if @minimum_password_length
-      %br/
-      %em
-        = @minimum_password_length
-        characters minimum
-  .field
-    = f.label :password_confirmation
-    %br/
-    = f.password_field :password_confirmation, autocomplete: "new-password"
-  .field
-    = f.label :current_password
-    %i (we need your current password to confirm your changes)
-    %br/
-    = f.password_field :current_password, autocomplete: "current-password"
-  .actions
-    = f.submit "Update"
-%h3 Cancel my account
-%p
-  Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-= link_to "Back", :back
+=render 'layouts/header'
+- breadcrumb :mypage
+= render "layouts/breadcrumbs"
+.mypage
+  .mypage__nav
+    = render 'layouts/mypage-sidebar'
+    .mypage__nav__main-contents
+      .mypage__nav__main-contents__mypage-identification
+        %h2.mypage__nav__main-contents__mypage-identification__head メール/パスワード
+      = form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f|
+        .edit-user
+          .edit-user__field
+            = f.label :メールアドレス
+            %br/
+            = f.email_field :email, autofocus: true, autocomplete: "email" ,class:'input_box'
+            %p メールアドレスを変更すると確認メールが送信されます。メール内のURLをクリックすると変更完了です。
+          - if devise_mapping.confirmable? && resource.pending_reconfirmation?
+            %div
+              Currently waiting confirmation for: #{resource.unconfirmed_email}
+          .edit-user__fields
+            .edit-user__fields__field
+              = f.label :現在のパスワード
+              = f.password_field :current_password, autocomplete: "current-password", class:'input_box'
+            .edit-user__fields__field
+              = f.label :新しいパスワード
+              = f.password_field :password, autocomplete: "new-password" ,class:'input_box',placeholder:'７文字以上'
+            .edit-user__fields__field
+              = f.label :新しいパスワード確認
+              %br/
+              = f.password_field :password_confirmation, autocomplete: "new-password", class:'input_box',placeholder:'７文字以上'
+              %p パスワードを設定したい場合は上記をすべて入力してください。（設定しない場合は空欄）
+            .edit-user__fields__actions
+              = f.submit "変更する", class: "submit_btn"
