--- a/app/views/layouts/_mypage-sidebar.html.haml
+++ b/app/views/layouts/_mypage-sidebar.html.haml
@@ -81,7 +81,7 @@
         支払い方法
         %i.fa.fa-chevron-right
     %li.mypage__nav__side-bar__lists__list
-      = link_to"/" do 
+      = link_to edit_user_registration_path do 
         メール/パスワード
         %i.fa.fa-chevron-right
     %li.mypage__nav__side-bar__lists__list
