--- a/app/views/devise/registrations/edit.html.haml
+++ b/app/views/devise/registrations/edit.html.haml
@@ -31,3 +31,6 @@
               %p パスワードを設定したい場合は上記をすべて入力してください。（設定しない場合は空欄）
             .edit-user__fields__actions
               = f.submit "変更する", class: "submit_btn"
+= render "layouts/banner"
+= render "layouts/footer"
+= render 'layouts/post-btn'
