やることリスト

--- a/app/assets/stylesheets/_listings.scss
+++ b/app/assets/stylesheets/_listings.scss
@@ -15,7 +15,7 @@
       background: #eee;
       height: 74px;
       &__tab{
-        display: inline-block;
+        display: block;
         float: left;
         text-align: center;
         p{
@@ -71,6 +71,7 @@
   .item-name{
     display: block;
     color: black;
+    font-size: 12px;
   }
   .item-stutas{
     display: inline-block;
