--- a/app/views/layouts/_mypage-sidebar.html.haml
+++ b/app/views/layouts/_mypage-sidebar.html.haml
@@ -5,15 +5,15 @@
         マイページ
         %i.fa.fa-chevron-right
     %li.mypage__nav__side-bar__lists__list
-      = link_to notifications_path do 
+      = link_to notifications_path do
         お知らせ
         %i.fa.fa-chevron-right
     %li.mypage__nav__side-bar__lists__list
-      = link_to"/" do 
+      = link_to things_user_path(current_user) do
         やることリスト
         %i.fa.fa-chevron-right
     %li.mypage__nav__side-bar__lists__list
-      = link_to likes_path do 
+      = link_to likes_path do
         いいね！一覧
         %i.fa.fa-chevron-right
     %li.mypage__nav__side-bar__lists__list
