--- a/app/assets/stylesheets/_show.scss
+++ b/app/assets/stylesheets/_show.scss
@@ -542,6 +542,7 @@
             width: 100%;
             opacity: 1;
             transition: opacity .3s;
+            height: 200px;
           }
         }
         &__body{
