--- a/app/assets/stylesheets/_mypage.scss
+++ b/app/assets/stylesheets/_mypage.scss
@@ -8,7 +8,7 @@
     margin: 0 auto 0;
     padding: 40px 0;
     width: 1020px;
-
+    overflow: hidden;
     &__side-bar{
       float: left;
       width: 280px;
