--- a/app/assets/stylesheets/_notification.scss
+++ b/app/assets/stylesheets/_notification.scss
@@ -7,7 +7,7 @@
   width: 100%;
   background: #fff;
   font-size:13px; 
-  a{
+  .item_link{
     float: inherit;
     text-align: start;
     text-decoration: none;
@@ -51,5 +51,26 @@
   &__message{
     font-size: 17px;
     margin-top: 160px;
+  }
+  .notifications_none{
+    padding: 30px 0 30px 0;
+    text-align: center;
+    position: relative;
+    bottom: -62px;
+    background:#ea352d;
+    color:white;
+    margin: auto;
+    width: 30%;
+    border-radius:10px; 
+    transition: 0.3s;
+    .link_none{
+      width: 100%;
+      border:none;
+    }
+  }
+  .notifications_none:hover{
+    background:#ea352d;
+    opacity: 0.9;
+    transition: 0.3s;
   }
 }
