--- a/app/views/notifications/_notification.html.haml
+++ b/app/views/notifications/_notification.html.haml
@@ -1,4 +1,4 @@
-= link_to item_path(notification.item.id) do
+= link_to item_path(notification.item.id),class:"item_link" do
   = image_tag notification.visiter.avatar
   = image_tag notification.item.images.first
   .time
