--- a/app/views/notifications/index.html.haml
+++ b/app/views/notifications/index.html.haml
@@ -1,5 +1,5 @@
 =render 'layouts/header'
-- breadcrumb :mypage
+- breadcrumb :notifications
 = render "layouts/breadcrumbs"
 .mypage
   .mypage__nav
