--- a/app/views/users/purchase.html.haml
+++ b/app/views/users/purchase.html.haml
@@ -27,7 +27,7 @@
                 .item-name
                   = "「#{item.name}」を購入しました"
                 %span.item-stutas
-                  取引中
+                  発送待ち
                 %i.fas.fa-angle-right
 = render "layouts/banner"
 = render "layouts/footer"
