--- a/app/views/users/completed.html.haml
+++ b/app/views/users/completed.html.haml
@@ -16,20 +16,8 @@
               %p 取引中
           %li.mypage__nav__main-contents__listings__tabs__tab.active
             %p 売却済み
-        -if @completed.blank?
-          %ul.mypage__nav__main-contents__bottom-tabcontents__item-lists
-            %li.mypage__nav__main-contents__bottom-tabcontents__item-lists__list.show
-              出品中の商品がありません
-        -else
-          %ul.mypage__nav__main-contents__bottom-tabcontents__listing-lists
-          - @completed.each do |item|
-            = link_to item_path(item) do
-              %li.mypage__nav__main-contents__bottom-tabcontents__listing-lists__list.new
-                = image_tag url_for(item.images.first), heigth: '50', width: '50', class: "item-image"
-                .item-name
-                  = "「#{item.name}」"
-                %span.item-stutas
-                  売却済み
-                %i.fas.fa-angle-right
+        %ul.mypage__nav__main-contents__bottom-tabcontents__item-lists
+          %li.mypage__nav__main-contents__bottom-tabcontents__item-lists__list.show
+            売却済みの商品がありません
 = render "layouts/banner"
 = render "layouts/footer"
