--- a/app/views/users/trading.html.haml
+++ b/app/views/users/trading.html.haml
@@ -16,9 +16,20 @@
           %li.mypage__nav__main-contents__listings__tabs__tab
             = link_to completed_user_path(current_user) do
               %p 売却済み
-        .mypage__nav__main-contents__bottom-tabcontents
+        -if @item_trading.blank?
           %ul.mypage__nav__main-contents__bottom-tabcontents__item-lists
             %li.mypage__nav__main-contents__bottom-tabcontents__item-lists__list.show
               取引中の商品がありません
+        -else
+          %ul.mypage__nav__main-contents__bottom-tabcontents__listing-lists
+          - @item_trading.each do |item|
+            = link_to item_path(item) do
+              %li.mypage__nav__main-contents__bottom-tabcontents__listing-lists__list.new
+                = image_tag url_for(item.images.first), heigth: '50', width: '50', class: "item-image"
+                .item-name
+                  = "「#{item.name}」"
+                %span.item-stutas
+                  取引中
+                %i.fas.fa-angle-right
 = render "layouts/banner"
 = render "layouts/footer"
