取引中、やることリスト修正

--- a/app/views/users/trading.html.haml
+++ b/app/views/users/trading.html.haml
@@ -22,12 +22,12 @@
               取引中の商品がありません
         -else
           %ul.mypage__nav__main-contents__bottom-tabcontents__listing-lists
-          - @item_trading.each do |item|
-            = link_to item_message_user_path do
+          - @item_trading.zip(@hash) do |item, hash|
+            = link_to item_path(item) do
               %li.mypage__nav__main-contents__bottom-tabcontents__listing-lists__list.new
                 = image_tag url_for(item.images.first), heigth: '50', width: '50', class: "item-image"
                 .item-name
-                  = "「#{item.name}」"
+                  = "#{@user[hash].nickname}さんが「#{item.name}」を購入しました。内容を確認の上、発送をお願いします。"
                 %span.item-stutas
                   取引中
                 %i.fas.fa-angle-right
