ビューの修正

--- a/app/views/users/transaction_item.html.haml
+++ b/app/views/users/transaction_item.html.haml
@@ -38,7 +38,7 @@
                 %i.fa.fa-chevron-right
                 %br/
           .mypage__nav__main-contents__shipping__notification
-            = link_to "商品の発送をしたので、発送通知をする",shipping_user_path(@item),class:"notification_btn"
+            = link_to "商品を発送をしたので、発送通知をする",shipping_user_path(@item),class:"notification_btn"
         .mypage__nav__main-contents__tab-container
           %ul.mypage__nav__main-contents__tab-container__tabs
             %li.mypage__nav__main-contents__tab-container__tabs__tab.active 
