--- a/app/views/users/things.html.haml
+++ b/app/views/users/things.html.haml
@@ -19,12 +19,12 @@
               やることがありません
         -else
           %ul.mypage__nav__main-contents__bottom-tabcontents__listing-lists
-          - @item_trading.zip(@hash_seller) do |item, hash|
+          - @item_trading.reverse_each do |item|
             = link_to transaction_item_user_path(item) do
               %li.mypage__nav__main-contents__bottom-tabcontents__listing-lists__list.new
                 = image_tag url_for(item.images.first), heigth: '50', width: '50', class: "item-image"
                 .item-name
-                  = "#{@users[hash].nickname}さんが「#{item.name}」を購入しました。内容を確認の上、発送をお願いします。"
+                  = "#{item.buyer.nickname}さんが「#{item.name}」を購入しました。内容を確認の上、発送をお願いします。"
                   %span.item-stutas
                     出荷よー٩( 'ω' )و
                   %i.fas.fa-angle-right
