パンくずリストの追加

--- a/app/views/users/buyer.html.haml
+++ b/app/views/users/buyer.html.haml
@@ -1,6 +1,6 @@
 =render 'layouts/header'
--# - breadcrumb :things
--# = render "layouts/breadcrumbs"
+- breadcrumb :buyer
+= render "layouts/breadcrumbs"
 .mypage
   .mypage__nav
     = render 'layouts/mypage-sidebar'
