--- a/app/views/users/purchase.html.haml
+++ b/app/views/users/purchase.html.haml
@@ -20,12 +20,12 @@
               購入した商品がありません
         -else
           %ul.mypage__nav__main-contents__bottom-tabcontents__listing-lists
-          - @item_buyer.each do |item|
-            = link_to transaction_item_user_path(item) do
+          - @item_buyer.reverse_each do |item|
+            = link_to item_path(item) do
               %li.mypage__nav__main-contents__bottom-tabcontents__listing-lists__list.new
                 = image_tag url_for(item.images.first), heigth: '50', width: '50', class: "item-image"
                 .item-name
-                  = "「#{item.name}」を購入しました"
+                  = "#{item.seller.nickname}さんから「#{item.name}」を購入しました。発送までお待ちください。"
                 %span.item-stutas
                   発送待ち
                 %i.fas.fa-angle-right
