--- a/app/views/layouts/_message.html.haml
+++ b/app/views/layouts/_message.html.haml
@@ -39,6 +39,6 @@
           .comment__from-m
             相手のことを考え丁寧なコメントを心がけましょう。不快な言葉遣いなどは利用制限や退会処分となることがあります。
           .comment__form
-            = form_with url: user_messages_path(@item.id), method: :post, local: true, id: "new_message" do |f|
+            = form_with url: item_messages_path(@item), method: :post, local: true, id: "new_message" do |f|
               = f.text_area :text, class: "textbox"
               = f.submit 'メッセージを送る', class: "submit"
