--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -23,6 +23,25 @@
 @import './footer';
 @import './slideshow';
 
+.sold_search{
+  position: absolute;
+  top: 295px;
+  color: white;
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 100px 100px 0 0;
+  border-color: #EA352E transparent transparent transparent;
+  p{
+    position: absolute;
+    top: -80px;
+    font-size: 20px;
+    font-weight: bold;
+    transform: rotate(-45deg);
+    letter-spacing: 2px;
+  }
+}
+
 nav.pagination {
   display: inline-block;
   padding: 0;
@@ -74,17 +93,28 @@ nav.pagination li a:hover:not(.active) {background-color: #ddd;}
   line-height: 20px;
   font-size: 12px;
   color: #fff;
-  animation: jump 3s ease-out;
+  animation: delayJump 3s ease-out;
+  animation-delay: 0.1s;
 }
 
 @keyframes jump {
   0%  {transform: translate( 0%,-550%) scale( 0.5, 1.5);}
   30% {transform: translate( 0%,   0%) scale( 1.4, 0.6);}
-  40% {transform: translate( 0%,-100%) scale( 0.6, 1.4);}
+  40% {transform: translate( 0%,-150%) scale( 0.6, 1.4);}
   55% {transform: translate( 0%,   0%) scale( 1.2, 0.8);}
-  60% {transform: translate( 0%, -50%) scale( 0.7, 1.3);}
+  60% {transform: translate( 0%, -75%) scale( 0.7, 1.3);}
   70% {transform: translate( 0%,   0%) scale( 1.1, 0.9);}
-  75% {transform: translate( 0%, -20%) scale( 0.8, 1.2);}
+  75% {transform: translate( 0%, -25%) scale( 0.8, 1.2);}
   100%{transform: translate( 0%,   0%) scale(   1,   1);}
 }
 
+@keyframes delayJump {
+  0%  {transform: translate(  0%,-550%) scale( 0.5, 1.5);}
+  30% {transform: translate(  0%,   0%) scale( 1.4, 0.6);}
+  40% {transform: translate( 40%,-100%) scale( 0.6, 1.4);}
+  55% {transform: translate(  0%,   0%) scale( 1.2, 0.8);}
+  60% {transform: translate(-40%, -50%) scale( 0.7, 1.3);}
+  70% {transform: translate(  0%,   0%) scale( 1.1, 0.9);}
+  75% {transform: translate( 20%, -20%) scale( 0.8, 1.2);}
+  100%{transform: translate(  0%,   0%) scale(   1,   1);}
+}
